# OOP_practic

./: README.md  main.py  pyproject.toml
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_classes_py.html  z_a44f0ac069e85531___init___py.html  z_a44f0ac069e85531_conftest_py.html  z_a44f0ac069e85531_test_category_py.html  z_a44f0ac069e85531_test_product_py.html
src/: classes.py
tests/: conftest.py  test_category.py  test_classes.py  test_product.py
